# Venio

./: .gitignore  CMakeLists.txt  GPUCalculation.cu  Layer.cxx  LossFunction.cxx  Main.cxx  Model.cxx  Optimizer.cxx  README.md  RandomGenerator.cxx  Shell.cxx  message.txt
CUDAlib/: GPUcalculation.cu  GPUcalculation.h
Venio/: Config.hxx  Venio.hxx
Venio/ActivationFunctions/: ActivationFunction.cxx  ActivationFunction.hxx
Venio/ActivationFunctions/ActivationFunction/: ActivationFunction.cxx  ActivationFunction.hxx
Venio/ActivationFunctions/ArcTg/: ArcTg.cxx  ArcTg.hxx
Venio/ActivationFunctions/Benti/: Benti.cxx  Benti.hxx
Venio/ActivationFunctions/ELU/: ELU.cxx  ELU.hxx
Venio/ActivationFunctions/GH/: GH.cxx  GH.hxx
Venio/ActivationFunctions/GhFunction/: GhFunction.cxx  GhFunction.hxx
Venio/ActivationFunctions/ISRLU/: ISRLU.cxx  ISRLU.hxx
Venio/ActivationFunctions/ISRU/: ISRU.cxx  ISRU.hxx
Venio/ActivationFunctions/LReLU/: LReLU.cxx  LReLU.hxx
Venio/ActivationFunctions/LinearFunction/: LinearFunction.cxx  LinearFunction.hxx
Venio/ActivationFunctions/LogisticFunction/: LogisticFunction.cxx  LogisticFunction.hxx
Venio/ActivationFunctions/ReLU/: ReLU.cxx  ReLU.hxx
Venio/ActivationFunctions/SELU/: SELU.cxx  SELU.hxx
Venio/ActivationFunctions/SiLU/: SiLU.cxx  SiLU.hxx
Venio/ActivationFunctions/Sin/: Sin.cxx  Sin.hxx
Venio/ActivationFunctions/SincFunction/: SincFunction.cxx  SincFunction.hxx
Venio/ActivationFunctions/SoftPlus/: SoftPlus.cxx  SoftPlus.hxx
Venio/ActivationFunctions/SoftSignFunction/: SoftSignFunction.cxx  SoftSignFunction.hxx
Venio/ActivationFunctions/TH/: TH.cxx  TH.hxx
Venio/BenchMark/: BenchMark.cxx  BenchMark.hxx
Venio/CPUKernel/: CPUKernel.cxx
Venio/CudaKernel/: Kernel.cu  Kernel.cxx  Kernel.hxx
Venio/ErrorLogger/: ErrorLogger.cxx  ErrorLogger.hxx
Venio/Kernel/: Kernel.cxx  Kernel.hxx
Venio/Layers/: Layer.cxx  Layer.hxx
Venio/Layers/ConvolutionLayer/: ConvolutionLayer.cxx  ConvolutionLayer.hxx
Venio/Layers/Layer/: Layer.cxx  Layer.hxx
Venio/Layers/SequentialLayer/: SequentialLayer.cxx  SequentialLayer.hxx
Venio/LossFunctions/: LossFunction.cxx  LossFunction.hxx
Venio/LossFunctions/LossFunction/: LossFunction.cxx  LossFunction.hxx
Venio/LossFunctions/SquareErrorFunction/: SquareErrorFunction.cxx  SquareErrorFunction.hxx
Venio/Model/: Model.cxx  Model.hxx
Venio/Optimizers/: LBFGS  Optimizer.cxx  Optimizer.hxx
Venio/Optimizers/ADAM/: ADAM.cxx  ADAM.hxx
Venio/Optimizers/Adadelta/: Adadelta.cxx  Adadelta.hxx
Venio/Optimizers/Adagrad/: Adagrad.cxx  Adagrad.hxx
Venio/Optimizers/BFGS/: BFGS.cxx  BFGS.hxx
Venio/Optimizers/GD/: GD.cxx  GD.hxx
Venio/Optimizers/Optimizer/: Optimizer.cxx  Optimizer.hxx
Venio/Optimizers/RMSProp/: RMSProp.cxx  RMSProp.hxx
Venio/RandomGenerator/: RandomGenerator.cxx  RandomGenerator.hxx
eigen-3.4.0/Eigen/src/Core/: DenseBase.h  Transpose.h
include/Venio/: ActivateFunction.hxx  Branch.hxx  Config.hxx  Layer.hxx  Logging.hxx  LossFunction.hxx  NeuralNetwork.hxx  Optimizer.hxx  TrainerStrategy.hxx  Venio.hxx
include/Venio/ActivateFunctions/: Benti.hxx  ELU.hxx  Gh.hxx  ISRLU.hxx  ISRU.hxx  LReLU.hxx  Linear.hxx  ReLU.hxx  SELU.hxx  SiLU.hxx  Sigmoid.hxx  Sin.hxx  Sinc.hxx  SoftPlus.hxx  Softsign.hxx  Th.hxx
include/Venio/Layers/: PerceptronLayer.hxx
include/Venio/LossFunctions/: SquareError.hxx
include/Venio/NeuralNetworks/: FunctionalModel.hxx  SequentionalModel.hxx
include/Venio/Optimizers/: ADAM.hxx  Adadelta.hxx  Adagrad.hxx  BFGS.hxx  GD.hxx  RMSProp.hxx
src/: Branch.cxx  Logging.cxx  NeuralNetwork.cxx  Optimizer.cxx  TrainerStrategy.cxx
src/ActivateFunctions/: Arctg.cxx  Benti.cxx  ELU.cxx  Gh.cxx  ISRLU.cxx  ISRU.cxx  LReLU.cxx  Linear.cxx  ReLU.cxx  SELU.cxx  SiLU.cxx  Sigmoid.cxx  Sin.cxx  Sinc.cxx  SoftPlus.cxx  Softsign.cxx  Th.cxx
src/Layers/: PerceptronLayer.cxx
src/LossFunctions/: SquareError.cxx
src/NeuralNetworks/: FunctionalModel.cxx  SequentionalModel.cxx
src/Optimizers/: ADAM.cxx  Adadelta.cxx  Adagrad.cxx  BFGS.cxx  GD.cxx  RMSProp.cxx
